Fix webkit spacing bug of guest search fill button.

--- a/site/src/styles/layout.scss
+++ b/site/src/styles/layout.scss
@@ -61,18 +61,25 @@ time {
   width: 60%;
 }
 
+input.ui-input-text {
+  margin: 0;
+}
+
 .infield-button {
   position: absolute;
   top: 0;
   left: 80.6%;
-  height: 1.3em;
+  height: 22px;
   width: 25px;
   margin: 0;
   padding: 0.4em 5px 0.4em 0;
   font-size: 16px;
   line-height: 1.3;
-  box-shadow: 0 0 0;
   color: #999;
+
+  -webkit-box-shadow: 0 0 0;
+  -moz-box-shadow: 0 0 0;
+  box-shadow: 0 0 0;
 
   &.loading {
     background-image: url('../images/loading.gif');
@@ -84,7 +91,7 @@ time {
 
 @media all and (max-width: 450px) {
   .infield-button {
-    right: 0;
+    right: -1px;
     top: 7px;
     left: auto;
   }
